@@ -3,6 +3,8 @@
 * Added asynchronous stream copy creation API.
 * Added `pkt_dts` API for AVFrame.
 * Raise exception when re-using a closed container.
+* Move caml_remove_generational_global_root to ocaml finalizers
+  to follow OCaml 5 memory model.
 
 1.1.7 (2023-02-08)
 =====
